# SuperAI-MCP

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  README_EN.md  README_ZH.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: quota.md
skills/multi-model-review/: SKILL.md
skills/quota-check/: SKILL.md
skills/using-superai-mcp/: SKILL.md
skills/using-superai-mcp/references/: parameters.md
src/superai_mcp/: __init__.py  __main__.py  cache.py  git_utils.py  models.py  openrouter.py  parsers.py  runner.py  server.py  splitter.py  validate.py
src/superai_mcp/quota/: __init__.py  _claude.py  _codex.py  _gemini.py  _http.py  _models.py
tests/: test_broadcast.py  test_cache.py  test_cache_integration.py  test_collaboration.py  test_cost.py  test_fallback.py  test_git_utils.py  test_integration.py  test_openrouter.py  test_parsers.py  test_quota_claude.py  test_quota_codex.py  test_quota_gemini.py  test_quota_http.py  test_quota_init.py  test_quota_models.py  test_runner.py  test_server.py  test_splitter.py  test_streaming.py  test_templates.py  test_validate.py
